clusters/in-cluster/argus/resources/argus-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argus
  annotations:
    external-dns.alpha.kubernetes.io/hostname: argus.bongima.be
    external-dns.alpha.kubernetes.io/target: traefik.bongima.be
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`argus.bongima.be`)
      kind: Rule
      services:
        - name: argus
          port: 8080
